--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -38,6 +38,11 @@
                     Dashboard
                 </a>
 
+                <a asp-controller="Payments" asp-action="History"
+                   class="hover:text-green-700 dark:hover:text-green-400">
+                    Purchases
+                </a>
+
                 <a asp-controller="Account" asp-action="Login"
                    class="hover:text-green-700 dark:hover:text-green-400">
                     Logout
